--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="config">
         <div class="configBox">
             <div id="error" style="display: none"></div>
-            <span class="title lang lang-en">RV PIDS Config</span>
+            <span class="title lang lang-en">PIDS simulator</span>
             <span class="title lang lang-zh">願景資訊顯示屏模擬器</span>
             <button id="langchoose">EN</button>
             <div class="online">
